# unilink-control

./: .gitignore  Cargo.toml  build.py  build.rs
.github/workflows/: unilink-macos-release.yml
docs/: UNILINK_ENGINEERING_RULES.md  UNILINK_EXECUTION_CHECKLIST_ANDROID_WINDOW.md  UNILINK_FINAL_TEST_MATRIX.md  UNILINK_HANDOFF_2026-07-04.md  UNILINK_HANDOFF_2026-07-11.md  UNILINK_HANDOFF_2026-07-15.md  UNILINK_HANDOFF_2026-07-16.md  UNILINK_HANDOFF_2026-07-17.md  UNILINK_HANDOFF_2026-07-18.md  UNILINK_HANDOFF_2026-07-19.md  UNILINK_PRODUCT_CHARTER.md  UNILINK_RELEASE_CHECKLIST_1.4.14.md  UNILINK_RELEASE_CHECKLIST_1.4.15.md  UNILINK_SERVER_LINES.md  UNILINK_TECH_STACK.md  UNILINK_UPDATE.md
flutter/: pubspec.yaml
flutter/android/: build.gradle  gradle.properties
flutter/lib/: common.dart  consts.dart  main.dart
flutter/test/: mac_window_projection_test.dart  unilink_public_connection_test.dart
flutter/windows/: CMakeLists.txt
libs/portable/: Cargo.toml  app_metadata.toml
libs/portable/src/: main.rs
patches/: unilink-hbb-common.patch
res/: osx-dist.sh
scripts/: UniLink_SYNC_SERVICE_ADMIN.bat  build_unilink_android_release.ps1  check_mac_release_env.sh  generate_unilink_update_manifest.ps1  publish_unilink_release.ps1  sync_service_from_user_build_admin.ps1  unilink_windows_install_migration.ps1  update_user_build.cmd  update_user_build.ps1
src/: client.rs  common.rs  core_main.rs  flutter_ffi.rs  ipc.rs  lib.rs  server.rs  updater.rs
src/hbbs_http/: downloader.rs
src/lang/: cn.rs  en.rs
src/platform/: windows.rs
src/server/: video_service.rs
(+69 files in other folders)
