[package]
name = "rustdesk-portable-packer"
version = "1.4.15"
edition = "2021"
description = "RustDesk Remote Desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
brotli = "3.4"
dirs = "5.0"
md5 = "0.7"
winapi = { version = "0.3", features = ["winbase"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemServices",
    "Win32",
    "Win32_System",
    "Win32_System_SystemInformation",
] }
native-windows-gui = {version = "1.0", default-features = false, features = ["animation-timer", "image-decoder"]}

[package.metadata.winres]
LegalCopyright = "Copyright 2026 UniLink Control. All rights reserved."
ProductName = "UniLink Control"
OriginalFilename = "UniLink-Control-QS.exe"
FileDescription = "UniLink Control Quick Support"
#ProductVersion = ""

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winnt", "pdh", "synchapi" ] }


